@@ -13,6 +13,7 @@ DIST portage-2.2_rc67-r1.tar.bz2 557726 RMD160 b89be005ea283e12eb33eb9f659a613cf
 DIST portage-2.2_rc67-r2.tar.bz2 557503 RMD160 2774d574dbe5585646085f4a79e17f824582f88e SHA1 8aa2c965fbdc4c91a3bc1189c15fa5877c33ad85 SHA256 0fe97bfb97a1ddc083a43d28ba6744acbc623247852af85214476201f0aa41a9
 DIST portage-2.2_rc67.patch.bz2 11199 RMD160 aacf56c1b54e0debe7cbf10b7a05fef073ac7eec SHA1 da2068ac61ba7c3ae5b1ecef298775a7a30841e0 SHA256 64dad166d418a313e4d001c1c9242c40b4e969c654df86c15d5d3ddcc166b899
 DIST portage-2.2_rc93.tar.bz2 640858 RMD160 ab13c64f4946bfc79fde9756de4711d42ed42d1e SHA1 5f96b3846a9abebbedbf73ba5bb0abd708541af6 SHA256 bc75c832a9e30500fe5fa30794aaf1b61c3b8c3c8ce98a499cbfbe1bc82839e3
+DIST portage-2.2_rc99.tar.bz2 643222 RMD160 e7163411a6f36f05e8fb922915895fbad6d13d36 SHA1 a30fc614ae0b850126877bf81b4942e1f350e54f SHA256 cfb06819fb54f4398ddfef9b780a9edbf026364e509298457f043358e15c8f0e
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
 DIST portage-man-pl-2.1.2.tar.bz2i 10348 RMD160 69e2204708796fc8b4354270840d2351b506a7f9 SHA1 b74344e5018ec38c6a8a8a2e554845270006ed62 SHA256 72180e468b32f93b6f2e0e0bf9fa5b1e385da0de33190c2b83c0f5581a921b5c
 EBUILD portage-2.1.6.13.ebuild 9824 RMD160 7105984fb918db107f8f5e5ecaa8cd6910ff560c SHA1 6d65368bd4505c5a2bdeda18472a75bc87fb401b SHA256 76f3ddc4e38208663ae5ba419ccaa11b6707307ef35c2db164779799f46b196e
@@ -24,6 +25,7 @@ EBUILD portage-2.2_rc67-r1.ebuild 9311 RMD160 a1e764f88f5c65e235ad85902774626732
 EBUILD portage-2.2_rc67-r2.ebuild 9297 RMD160 70ceb7e2a94095aa6679a42fc935abbc4f53216b SHA1 c8630e32df70fc8f2f56b2fa2036fd12f06b2c25 SHA256 7c77c327d7592bc02ce5b8721e064372e705ceda55aba847f4bad0061d62cc75
 EBUILD portage-2.2_rc67.ebuild 10585 RMD160 5b048e89f617091897af67f01376063b3370184b SHA1 e007b51065300dcad3cd389114899ae422a0c01e SHA256 c089377b80103250aeeff43310b264a0310198de79b3fd032f57cbc535332bc2
 EBUILD portage-2.2_rc93.ebuild 11208 RMD160 3612db6f58ba00a974be30fe79efda9d278ed4c2 SHA1 9751380646a383217eee88e38bc7d3bec07b39a7 SHA256 f2673c54eee3cfd553880ab0ee54b57aeea10a3f8b884c1655dd044bed16854f
+EBUILD portage-2.2_rc99.ebuild 11208 RMD160 4cf231006532e62551fb059319bd56a761282d3b SHA1 8de1686037917255f3938afd4f47d77c38797d92 SHA256 872fc0b64b852ebce77557cc00d51a4557134ea09d2d62f47474ca9d254c9214
 EBUILD portage-9999.ebuild 10052 RMD160 33d3629dd83a62782f2b9888180719f955692e2b SHA1 5afd21f449ddacf20a24eca942e422305d85647c SHA256 a0de1d7dd2a1502400a7f83d0774a47debc2e6c54522b21bbaf21d8f6a56e7e1
-MISC ChangeLog 12232 RMD160 58a33d6ff83730f451d092e8765ed64694ffcbf3 SHA1 1dc8726761e71a4b4dd4aadf5890dc4d98777009 SHA256 d69a2b946ea5f3c615cc6954291eafe28ffd32baebf55a58a57ca965b09c833f
+MISC ChangeLog 12480 RMD160 1b21845d93a8e880b1f358a92342cfa1aad2ffd5 SHA1 c26d2653d9447f3590fa250552f32ae8189a956c SHA256 3a82afe0dedb5dc9368f0ca15fd85694ee1f4057297c2af3bbc3b13b19e87867
 MISC metadata.xml 618 RMD160 9510c974d4aa9a1383674d331a973140beb44e48 SHA1 0822478deaeb3b22358fff5c695111bfdf3ff2f6 SHA256 00ca0aa3a29ec8f82ddaf2e0f89e0b2e959131a6350f64b3c49b1125cbb32a13
