@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.703 2010/04/30 14:40:00 ranger Exp $
 
+*portage-2.2_rc99
+
+  22 Oct 2010; Daniel Robbins <drobbins@funtoo.org> portage-2.2_rc99.ebuild:
+  New upstream ebuild with a layout.conf patch from zmedico that should allow
+  us to set up a global gentoo -> funtoo repo alias. Masked for testing.
+
 *portage-2.2_rc93
 
   20 Oct 2010; Daniel Robbins <drobbins@funtoo.org> portage-2.2_rc93.ebuild:
